Completed S3 File Upload Implementation

--- a/src/AwsS3BucketUpload/Views/web.config
+++ b/src/AwsS3BucketUpload/Views/web.config
@@ -23,6 +23,19 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    
+    <add key="AWSProfileName" value="Profile Name" />  
+    <add key="AWSAccessKey" value="AKIAJL77D3YO4GBCLXMA" />  
+    <add key="AWSSecretKey" value="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" />  
+    <!--AWSProfileName is used to reference an account that has been registered with the SDK.  
+If using AWS Toolkit for Visual Studio then this value is the same value shown in the AWS Explorer.  
+It is also possible to register an account using the <solution-dir>/packages/AWSSDK-X.X.X.X/tools/account-management.ps1 PowerShell script  
+that is bundled with the nuget package under the tools folder.  
+  
+        <add key="AWSProfileName" value="" />  
+-->  
+    
+
   </appSettings>
 
   <system.webServer>
@@ -30,9 +43,17 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+    
+    <security>  
+      <requestFiltering>  
+        <requestLimits maxAllowedContentLength="1073741824" />  
+      </requestFiltering>  
+    </security>  
+
   </system.webServer>
 
   <system.web>
+    <httpRuntime targetFramework="4.6" maxRequestLength="1048576" executionTimeout="3600" />  
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
