--- a/src/AwsS3BucketUpload/Web.config
+++ b/src/AwsS3BucketUpload/Web.config
@@ -9,18 +9,27 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--AWSProfileName is used to reference an account that has been registered with the SDK.
-If using AWS Toolkit for Visual Studio then this value is the same value shown in the AWS Explorer.
-It is also possible to register an account using the <solution-dir>/packages/AWSSDK-X.X.X.X/tools/account-management.ps1 PowerShell script
-that is bundled with the nuget package under the tools folder.
 
-		<add key="AWSProfileName" value="" />
--->
+    <add key="AWSAccessKey" value="AKIAJL77D3DSDKSYO4AKFGBCLXMA" />
+    <add key="AWSSecretKey" value="8Iowx4xasfvPqlVbSASi02jLS3Asj33skDty8Dy8bQmpflwtDz" />
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
-    <httpRuntime targetFramework="4.6" />
+    <httpRuntime targetFramework="4.6" maxRequestLength="1048576" executionTimeout="3600"/>
+
   </system.web>
+
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824" />
+      </requestFiltering>
+    </security>
+
+  </system.webServer>
+  
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
