--- a/src/AwsS3BucketUpload/packages.config
+++ b/src/AwsS3BucketUpload/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK" version="2.3.55.2" targetFramework="net46" />
   <package id="AWSSDK.Core" version="3.3.22.2" targetFramework="net46" />
+  <package id="AWSSDK.S3" version="3.3.18.2" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
